--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           // gắn sự kiện cho nút Discord
           const discordBtn = document.getElementById("discordBtn");
           discordBtn.addEventListener("click", () => {
-            window.open("https://discord.gg/abcxyz", "_blank"); // đổi link này thành link Discord của bạn
+            window.open("https://discord.gg/cHrynR4E", "_blank"); // đổi link này thành link Discord của bạn
           });
         }
         overlay.style.display = 'none';
