--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           mainContent.innerHTML = `
             <h1>Connect</h1>
             <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
-            <button id="discordBtn">Tham gia Discord</button>
+            <button id="discordBtn">Join my sever</button>
           `;
           // gắn sự kiện cho nút Discord
           const discordBtn = document.getElementById("discordBtn");
