--- a/index.html
+++ b/index.html
@@ -2,169 +2,125 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Saki-Hub</title>
+  <title>Web Dark Mode</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
+      background-color: black;
+      color: white;
+      overflow-x: hidden;
     }
-
-    /* Header */
     header {
       display: flex;
       align-items: center;
-      justify-content: center;
-      padding: 10px 0;
-      background-color: #111;
-      position: sticky;
+      background: #111;
+      padding: 10px;
+      position: fixed;
+      width: 100%;
       top: 0;
       z-index: 1000;
-      position: relative;
     }
-
-    .logo {
-      font-size: 20px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    /* Nút ba gạch */
-    .dropbtn {
-      position: absolute;
-      left: 0;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: #222;
-      color: white;
-      padding: 10px 16px;
-      font-size: 20px;
+    #menuBtn {
+      font-size: 24px;
+      background: none;
       border: none;
+      color: white;
       cursor: pointer;
-      border-radius: 0;
+      margin-right: 10px;
     }
-
-    .dropbtn:hover {
-      background-color: #333;
+    #logo {
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 18px;
     }
-
-    /* Sidebar */
-    .dropdown-content {
-      height: 100vh;
-      width: 220px;
+    #dropdownMenu {
       position: fixed;
       top: 0;
-      left: -220px;
-      background-color: #111;
-      overflow-x: hidden;
-      transition: 0.3s;
-      z-index: 2000;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background: #222;
+      transition: left 0.3s;
       padding-top: 60px;
+      z-index: 999;
     }
-
-    .dropdown-content a {
-      display: block;
-      padding: 15px 20px;
-      color: #fff;
-      text-decoration: none;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #333;
-    }
-
-    .dropdown-content.show {
+    #dropdownMenu.show {
       left: 0;
     }
-
-    /* Container nội dung */
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: #000;
-      opacity: 0;
-      transition: opacity 0.5s ease;
+    #dropdownMenu a {
+      display: block;
+      color: white;
+      padding: 15px;
+      text-decoration: none;
     }
-
-    .container.show {
+    #dropdownMenu a:hover {
+      background: #333;
+    }
+    #mainContent {
+      margin-top: 60px;
+      padding: 20px;
+      min-height: 100vh;
+      opacity: 0;
+      transition: opacity 0.8s;
+    }
+    #mainContent.show {
       opacity: 1;
     }
-
-    /* Overlay load */
     #overlay {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #000;
+      background: black;
       display: flex;
-      align-items: center;
       justify-content: center;
-      z-index: 3000;
+      align-items: center;
+      z-index: 2000;
     }
-
-    /* Spinner */
-    .spinner {
-      border: 6px solid #333;
-      border-top: 6px solid #fff;
+    .loader {
+      border: 8px solid #333;
+      border-top: 8px solid white;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 60px;
+      height: 60px;
       animation: spin 1s linear infinite;
     }
-
     @keyframes spin {
       0% { transform: rotate(0deg);}
       100% { transform: rotate(360deg);}
     }
-
-    /* Nút Discord */
     button {
-      background-color: #5865F2; /* màu Discord */
-      color: white;
+      padding: 10px 20px;
+      background: white;
+      color: black;
       border: none;
-      padding: 12px 20px;
-      border-radius: 6px;
-      font-size: 16px;
       cursor: pointer;
-      transition: 0.2s;
+      border-radius: 5px;
     }
-
     button:hover {
-      background-color: #4752c4;
+      background: #ddd;
     }
   </style>
 </head>
 <body>
-
-  <!-- Overlay Load -->
-  <div id="overlay">
-    <div class="spinner"></div>
-  </div>
-
-  <!-- Header -->
   <header>
-    <button class="dropbtn" id="menuBtn">☰</button>
-    <div class="logo" id="logo">Saki-Hub</div>
+    <button id="menuBtn">☰</button>
+    <div id="logo">Web Dark Mod</div>
   </header>
 
-  <!-- Sidebar menu -->
-  <div class="dropdown-content" id="dropdownMenu">
+  <div id="dropdownMenu">
     <a href="#" data-page="home">Home</a>
     <a href="#" data-page="script">Script</a>
     <a href="#" data-page="connect">Connect</a>
   </div>
 
-  <!-- Nội dung chính -->
-  <div class="container" id="mainContent">
-    <h1>Giới thiệu</h1>
-    <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home mặc định.</p>
+  <div id="overlay">
+    <div class="loader"></div>
   </div>
+
+  <div id="mainContent"></div>
 
   <script>
     const overlay = document.getElementById('overlay');
@@ -172,26 +128,6 @@
     const dropdownMenu = document.getElementById('dropdownMenu');
     const mainContent = document.getElementById('mainContent');
     const logo = document.getElementById('logo');
-
-    // Hide overlay sau khi load web
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        overlay.style.display = 'none';
-        mainContent.classList.add('show');
-      }, 1000);
-    });
-
-    // Toggle sidebar
-    menuBtn.addEventListener('click', () => {
-      dropdownMenu.classList.toggle('show');
-    });
-
-    // Click ngoài sidebar thì tắt
-    window.addEventListener('click', (e) => {
-      if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
-        dropdownMenu.classList.remove('show');
-      }
-    });
 
     // Hàm hiển thị nội dung
     function showPage(page){
@@ -213,18 +149,49 @@
           mainContent.innerHTML = `
             <h1>Connect</h1>
             <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
-            <button id="discordBtn">Join my sever</button>
+            <button id="discordBtn">Vào server Discord</button>
           `;
-          // gắn sự kiện cho nút Discord
           const discordBtn = document.getElementById("discordBtn");
           discordBtn.addEventListener("click", () => {
-            window.open("https://discord.gg/cHrynR4E", "_blank"); // đổi link này thành link Discord của bạn
+            window.open("https://discord.gg/cHrynR4E", "_blank");
           });
         }
+
+        // Lưu lại trang đang mở
+        localStorage.setItem("currentPage", page);
+
         overlay.style.display = 'none';
         mainContent.classList.add('show');
       }, 800);
     }
+
+    // Khi load web
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        overlay.style.display = 'none';
+        mainContent.classList.add('show');
+
+        // kiểm tra có trang đã lưu không
+        const savedPage = localStorage.getItem("currentPage");
+        if(savedPage){
+          showPage(savedPage);
+        } else {
+          showPage("home"); // mặc định lần đầu
+        }
+      }, 1000);
+    });
+
+    // Toggle sidebar
+    menuBtn.addEventListener('click', () => {
+      dropdownMenu.classList.toggle('show');
+    });
+
+    // Click ngoài sidebar thì tắt
+    window.addEventListener('click', (e) => {
+      if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
+        dropdownMenu.classList.remove('show');
+      }
+    });
 
     // Menu click
     const links = dropdownMenu.querySelectorAll('a');
@@ -237,7 +204,7 @@
       });
     });
 
-    // Click logo về Home
+    // Logo click về Home
     logo.addEventListener('click', () => {
       showPage('home');
     });
